--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="logoBox">
       <img src="image/logo.png" alt="">
     </div>
-    <!-- <div class="buttonBox">
+    <div class="buttonBox">
       <a href="#" style="color: #f55128;">누루마사지</a>
-      <a href="page/nomal.html">일반코스</a>
+      <!-- <a href="page/nomal.html">일반코스</a> -->
       <a href="page/sm.html">SM코스</a>
       <div href="#" id="away">
         <div class="away">다른지역보기</div>
@@ -45,8 +45,7 @@
           <a href="page/local.html?id=제주">제주</a>
         </div>
       </div>
-      
-    </div> -->
+    </div>
   </nav>
   <div class="bodySection">
     <div class="textBig">출장마사지 누루</div>
