--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
       출장마사지 전문 누루 출장마사지
     </div>
     <img src="image/logo.png" alt="">
-    <!-- <div class="footerNav">
+    <div class="footerNav">
       <a href="page/nomal.html">일반코스</a>
       <a href="page/sm.html">SM코스</a>
-    </div> -->
+    </div>
     <div class="footerEnd">
       CopyRight © 2023 누루 출장마사지 All Rights Reserved.
     </div>
