--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="buttonBox">
       <a href="#" style="color: #f55128;">누루마사지</a>
-      <!-- <a href="page/nomal.html">일반코스</a> -->
+      <a href="page/nomal.html">일반코스</a>
       <a href="page/sm.html">SM코스</a>
       <div href="#" id="away">
         <div class="away">다른지역보기</div>
