--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <meta name="description" property="og:description" content="업계 1위 SEXY & HOT 관리사 대기 중 누루 출장마사지를 이용해보세요.">
   <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/ojowa-75dc7.appspot.com/o/main.png?alt=media&token=1229a4c0-5782-4abd-a30f-f50cff2e9d44">
   <meta property="og:title" content="Cute & Hot 누루 출장마사지"> 
-  <meta property="og:url" content="">
+  <meta property="og:url" content="https://nuru12.kro.kr/">
   <link rel="shortcut icon" href="./image/icon.png">
-  
+  <meta name="google-site-verification" content="l_xS3T1Nb8lGDPdl0uZX8Z933L0s3_O4W8q-y8t41ws" />
 
 </head>
 <body>
