--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="text">두 벗은 몸이 서로 엉키며</br>점점 쾌감이 고조됩니다.</div>
     <div class="textMid mt20 mb20">바디투바디 누루젤 마사지</br>이용시간 및 요금</div>
     <div class="imgbox">
-      <img src="image/menu.png" alt="">
+      <img src="image/누루일반.png" alt="">
     </div>
   </div>
   <footer>
