--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     <div class="text">느낌의 정도가 다르기 때문입니다.</div>
     <img src="image/main1.png" alt="" class="img1">
     <div class="contactBox" style="margin-bottom: 50px;">
-      <a href="#" target="_blank" class="contactBoxContent" style="background-color: #ffe800;">
+      <a href="#" target="_blank" class="contactBoxContent katalkLink" style="background-color: #ffe800;">
         <img src="image/katalk.png" alt="" width="65px" >
         <div class="">카카오톡 상담</br>바로가기</div>
       </a>
-      <a href="#" target="_blank" class="contactBoxContent" style="background-color: #1aabdf;">
+      <a href="#" target="_blank" class="contactBoxContent teleLink" style="background-color: #1aabdf;">
         <img src="image/tele.png" alt="" width="65px">
         <div class="">텔레그램 상담</br>바로가기</div>
       </a>
@@ -108,6 +108,12 @@
       }
     </style>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-firestore.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-storage.js"></script>
+  <script src="href.js"></script>
   <script src="nav.js"></script>
 </body>
 </html>
