--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <div class="text">느낌의 정도가 다르기 때문입니다.</div>
     <img src="image/main1.png" alt="" class="img1">
     <div class="contactBox" style="margin-bottom: 50px;">
-      <a href="#" target="_blank" class="contactBoxContent katalkLink" style="background-color: #ffe800;">
+      <a href="#" target="_blank" class="contactBoxContent katalkLink" style="background-color: #00ca42;">
         <img src="image/katalk.png" alt="" width="65px" >
-        <div class="">카카오톡 상담</br>바로가기</div>
+        <div class="">라인 상담</br>바로가기</div>
       </a>
     </div>
     <div class="textBig mb20">누루젤 마사지 예약하기</div>
